--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 /*topbar styling*/
 
-nav {
+*topbar {
     width: 100%;
     height: 15vh;
     background-color: black;
     color: white;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
 }
