--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 /*topbar styling*/
 
-*topbar {
+nav{
     width: 100%;
-    height: 15vh;
     background-color: black;
+}
+*topbar {
+    width: 37%;
+    height: 15vh;
     color: white;
     display: flex;
     flex-direction: row;
