--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ nav{
 *topbar {
     width: 37%;
     height: 15vh;
-    color: white;
+    color: blue;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
